java8.spoofax3/test/statics/java/classes/nested/qualifiedtypequalifiedthis.no.spt.bak
module classes/nested/qualifiedtypequalifiedthis_no

language metaborg-java

test qualifiedtypequalifiedthis [[

test;



// error: A\.B cannot be converted to A

[p] {

    [A]
    package p;
    public class A {
        public class B {
            public void m() {
                 A a = p.A.B.this;
            }
        }
    }

}

]] analysis fails
   run javacFails to ""
